# Gravity2D

./: CMakeLists.txt  CMakeSettings.json  LICENSE  main.cpp
include/: gravity2d.hpp  vec2.hpp
source/: gravity2d.cpp
